update several text

--- a/writings/main.tex
+++ b/writings/main.tex
@@ -1,30 +1,14 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
-\usepackage{booktabs,siunitx,tabularx, natbib}
-\usepackage[dvipdfmx]{hyperref}
-
-\bibliographystyle{jecon}
-\bibpunct[:]{(}{)}{,}{a}{}{,}
-
-\title{What makes Legislative Attention: Institutional Characteristics of Political Attention}
-\author{Yuki TSUJIMURA}
-\date{Date}
-
-\begin{document}
-
-\maketitle
-
 \section{Introduction}
 　アメリカの議会はしばしば「世界最強」の議会\citep*{2004-cr}と言われ、憲法上立法を担う集団として多くの分析が蓄積されてきた。連邦議会はアメリカ政治において最も重要なアクターのひとつであり、その決定は政治的・社会的に大きな意味を持つ。\\
-　しかしながら、近年アメリカ議会は分極化の影響を受け、その機能を十分に発揮していないとする議論も存在する。民主党と共和党が鋭く対立し、議会における法案審議が停滞するといった手詰まりの状態(gridlock)が問題視され、議会が十分に立法機能を果たすことが困難になっているとも指摘される\footnote{議会審議が行き詰まることによって、重要な法案の審議が進まない「立法生産性」の低下がもたらされているかについては議論の余地がある。\citep*{}しかしながら、議会において法案審議がかつてのように議案ごとに審議と票読みを行い、多数派形成を都度行うといった法案審議・議決過程が行われなくなり、より固定的な投票行動が観察されるようになってきていることは事実である。\citep*{Poole2017-ir,Layman2006-tg}}。\\
+　しかしながら、近年アメリカ議会は分極化の影響を受け、その機能を十分に発揮していないとする議論もある。民主党と共和党が鋭く対立し、議会における法案審議が停滞するといった手詰まりの状態(gridlock)が問題視され、議会が十分に立法機能を果たすことが困難になっているとも指摘される\footnote{議会審議が行き詰まることによって、重要な法案の審議が進まない「立法生産性」の低下がもたらされているかについては議論の余地がある。\citep*{}しかしながら、議会において法案審議がかつてのように議案ごとに審議と票読みを行い、多数派形成を都度行うといった法案審議・議決過程が行われなくなり、より固定的な投票行動が観察されるようになってきていることは事実である。\citep*{Poole2017-ir,Layman2006-tg}}。\\
 　こうした状態で、アメリカ議会はどのようにしてアメリカ社会を代表していると言えるのだろうか。ひとつの事例として銃規制問題が挙げられる。銃の所持は現在のアメリカにおいて憲法典によって認められた権利として位置付けられており、連邦政府が直接のその所有や管理を規制もしくは禁止することは非常に困難になっている。他方で、度重なる銃乱射事件はアメリカ社会における銃の位置付けを問い直しており、Pew Research Centerによる調査では、2019年の時点で60\%の有権者がより厳しい銃規制を支持している\footnote{この比率は年々増加しており、2017年には52\%、2018年には57\%の有権者がより厳しい銃規制を望んでいる。}。\citep*{Schaeffer2019-ld}\\
-　このように社会的支持が変化する一方で、議会は銃規制を実行的に前に進めることに成功していない。議会民主党は複数回にわたって銃規制法案を提出し、審議を進めようと試みているが、特に上院でのフィリバスターなどを経て十分な立法成果を挙げることに成功していない。少なくともアメリカにおいて世論が一定の関心を持ち、かつ比較的明瞭に有権者一般の選好が観察されるような政策領域においても、それが必ずしも立法成果につながるわけではない。
-　ではなぜ、世論が関心を持つ法案であっても、議会において十分な審議や立法成果に繋がらないという現象が生じるのだろうか。これに対する重要な解答は、議会が必ずしも世論に直接反応して立法活動に携わっているわけではないことに由来する。以下では、議会研究を中心とした研究成果を概観しながら、議会と有権者を含む公共空間とがいかに連結し、分断されているのかを検討した上で、本論の問題設定を提示する。
+　このように社会的支持が変化する一方で、議会は銃規制を実行的に前に進めることに成功していない。議会民主党は複数回にわたって銃規制法案を提出し、審議を進めようと試みているが、特に上院でのフィリバスターなどを経て十分な立法成果を挙げることに成功していない。少なくともアメリカにおいて世論が一定の関心を持ち、かつ比較的明瞭に有権者一般の選好が観察されるような政策領域においても、それが必ずしも立法成果につながるわけではない。\\
+　ではなぜ、世論が関心を持つ法案であっても、議会において十分な審議や立法成果に繋がらないという現象が生じるのだろうか。これに対する重要な解答は、議会が必ずしも世論に直接反応して立法活動に携わっているわけではないことに由来する。以下では、議会研究を中心とした研究成果を概観しながら、議会と有権者を含む公共空間とがいかに連結し、分断されているのかを検討した上で、本論の問題設定を提示する。\\
 
 \subsection{議会はどこを向いて立法しているのか}
-\subsubsection{再選動機}
-　議会の立法活動について、古典的には議員の再選動機から議会行動を説明するという枠組みが提示されてきた。\citep*{Mayhew1974-jz}\\
-　こうした再選を求める議員による試みとして議員行動を説明する枠組みにおいて、有権者の意向とは別に、利益団体の重要性を考慮する議論も存在する。\\
+　議会が有権者を代表しているのかという問いは大別して3つの観点から議論されてきた。第1に、社会を議会がいかに反映しているのかを検討するという分析枠組みが提示されてきた。例えば、議会がいかなる法律を制定するのかという視角から分析がなされている。\\
+　第2の方策として、議員と有権者との関係性を論じることも模索されてきた。\citet*{Fenno1977-se,Fenno2000-up}に代表されるように、議員が選挙区をいかに代表しているのかを追跡調査によって探索する試みや、議員が有権者に対していかなるアピールを行ってきたのかを検討するなどの戦略も取られてきた。\\
+　第3の方策として、議会が立法活動にどの程度従事しているのかという機能の面に着目した議論がなされている。\citet*{Mayhew1991-rq,Mayhew2005-or}の\textit{Divided We Govern}を画期として蓄積されてきたこの議論は、議会が立法生産にどの程度寄与しているのかを論じることで、議会が社会を代表するという働きをどの程度達成できているのかを論じている。近年のイデオロギー的分極化を受けて、議会がこう着状態や機能不全に陥っているという指摘もなされており、現代の議会を考える上で重要な論点と言える。\\
 
 \subsubsection{議員配置}
 　議会における意思決定の幅を議員の配置図から考察する議論も存在する。\citep*{Krehbiel2010-ob,Tsebelis2009-hf}
@@ -84,6 +68,3 @@
 \section*{Discussion}
 
 \section*{Conclusion}
-
-\bibliography{reference}
-\end{document}
