--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -137,9 +137,8 @@
   year      =  2022
 }
 
-@INCOLLECTION{Baumgartner2009-eb,
-  title     = "Lobbying and policy change",
-  booktitle = "Lobbying and Policy Change",
+@BOOK{Baumgartner2009-eb,
+  title = "Lobbying and Policy Change",
   author    = "Baumgartner, Frank R and Berry, Jeffrey M and Hojnacki, Marie
                and Leech, Beth L and Kimball, David C",
   abstract  = "… from our use of the concept of lobbying ``sides'' in the
@@ -148,6 +147,19 @@
                it …",
   publisher = "University of Chicago Press",
   year      =  2009
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@BOOK{Baumgartner2019-nl,
+  title     = "Comparative policy agendas: Theory, tools, data",
+  author    = "Baumgartner, Frank R and Breunig, Christian and Grossman,
+               Emiliano",
+  abstract  = "The Comparative Agendas Project (CAP) brings together data on
+               government activities in over twenty countries, and provides a
+               consistent categorizing system to understand when a …",
+  publisher = "Oxford University Press",
+  year      =  2019
 }
 
 @BOOK{Baumgartner2020-ee,
@@ -977,6 +989,14 @@
   language  = "en"
 }
 
+@BOOK{Mayhew1991-rq,
+  title     = "Divided we govern: Party control, lawmaking, and investigations,
+               1946-1990",
+  author    = "Mayhew, David R",
+  publisher = "Yale University Press",
+  year      =  1991
+}
+
 @BOOK{Mayhew2005-or,
   title     = "Divided We Govern: Party Control, Lawmaking and Investigations,
                1946-2002",
@@ -1385,4 +1405,29 @@
   publisher = "早稲田大学出版部",
   year      =  2009,
   language  = "jpn"
+}
+
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{2020-ce,
+  title   = "政党指導部は今でも所属議員の代理人なのか？（一） -アメリカ連邦議会における政党指導部の発達と分極化-",
+  author  = "松本, 俊太",
+  journal = "名城法学",
+  volume  =  69,
+  number  =  3,
+  pages   = "79--104",
+  year    =  2020
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{2020-jt,
+  title   = "政党指導部は今でも所属議員の代理人なのか？（二） -アメリカ連邦議会における政党指導部の発達と分極化-",
+  author  = "松本, 俊太",
+  journal = "名城法学",
+  volume  =  69,
+  number  =  4,
+  pages   = "55--90",
+  year    =  2020
 }
