--- a/writings/review.tex
+++ b/writings/review.tex
@@ -2,6 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage{booktabs,siunitx,tabularx, natbib}
 \usepackage[dvipdfmx]{hyperref}
+\usepackage{comment}
 
 \bibliographystyle{jecon}
 \bibpunct[:]{(}{)}{,}{a}{}{,}
@@ -14,18 +15,18 @@
 
 \maketitle
 
-\subsection{法案審議をめぐる議会政党の役割}
-　アメリカにおいて、議員行動の最小単位は政党ではなく議員個人である。この意味で、アメリカ議会における政党の重要性はヨーロッパや日本における政党の役割とは明確に異なるものである。アメリカの政党において党議拘束は存在せず、議員個人は少なくとも建前上個々の法案について個別に判断して票を投じている。アメリカ議会の歴史上、同一政党内における議員の投票行動に大きな分散が見られることは、議員個人レベルでの行動が議会における主体となっていることを示唆している。\\
-　しかしながら、議員個人が重要な最小単位であるという事実は、議会において政党が全く役割を果たしていないということを意味しない。議会内のみに限ったとしても、政党は議事手続きやポスト分配などを通じて大きな役割を果たしている。各委員会の委員長が付託された法案の審議可否について大きな影響を行使できることがしばしば強調される。\\
-　これら議会における政党の役割は、明示的に法文上で政党指導部付与されているものでは必ずしもなく、実際にアクターが行動する中で立ち現れているという部分が大きい。ゆえに、議会において政党が果たしている役割については、根源的な疑問も含めて多数の理論的立場が存在している。最も政党の役割を小さく考える立場である純粋多数派理論\citep*{Krehbiel1998-ob,Krehbiel2010-ob}が存在する。この議論では政党の役割はほぼ捨象され、議会内で鍵となる票を握る議員の重要性が強調される。より議会内政党の役割を重視する政党政府論の系譜は、議会において多数党が議案を積極的に前に進める役割を果たす\citep*{Rohde1991-da,Aldrich1995-xf}といった議論や、多数党の不利に働く議案を排除している\citep*{Cox2005-pn,Cox2007-xq}といった議論がなされる。\\
-　理論的な立場は極めて多様であるが、これに対応する実証的知見も明瞭な回答を示している訳ではない。実証上の混乱は、一部には理論的モデルがどれも純粋なモデルから予測を導出する点に求められるが、計測手法における困難も大きな要因である。\\
-　本章では議会内政党をめぐる理論的枠組みを概観したのち、その実証的課題として、理論的問題と計測手法における問題を指摘する。特に、法案審議をめぐる議会内政党の議論が多数党を中心になされてきたことを問題視し、近年の少数党に着目した、議会研究の議論を紹介する。\\
+\section{法案審議をめぐる議会政党の役割}
+　アメリカ議会の特徴的な点として挙げられることは、投票行動ですら議員個人レベルの行動が顕著である点であろう。議員個人レベルの行動が法案審議において重要な役割を果たすことは、アメリカ議会における政党の重要性がヨーロッパや日本における政党の役割と明確に異なることを示唆している。アメリカの議会政党において党議拘束は存在せず、議員個人は少なくとも建前上個々の法案について個別に判断して票を投じている。\\
+　しかしながら、議員個人が法案審議過程で比較的自由に行動するという事実は、議会において政党が全く役割を果たしていないということを意味しない。政党は議事手続きやポスト分配などを通じて大きな役割を果たしている。各委員会の委員長が付託された法案の審議可否について大きな影響を行使できることに代表されるように、議会における審議過程は横並びの議員らによる交渉や取引だけではなく、異なる政治・権力資源を有する議員の存在によっても規定されているといえる。\\
+　議会における政党の役割は、明示的に法文上で政党指導部に付与されているものでは必ずしもなく、実際にアクターが行動する中で立ち現れているという部分も大きい。ゆえに、議会において政党が果たしている役割については、根源的な疑問も含めて多数の理論的立場が存在している。最も政党の役割を小さく考える立場として\citet*{Krehbiel1998-ob,Krehbiel2010-ob}に代表される、議員の政策選好上の立場のみから法案審議過程を論じる議論が存在する。この議論では政党の役割はほぼ捨象され、議会内で鍵となる票を握る議員の重要性が強調される。より議会内政党の役割を重視する政党政府論の系譜は、議会において多数党が議案を積極的に前に進める役割を果たす\citep*{Rohde1991-da,Aldrich1995-xf}といった議論や、多数党の不利に働く議案を排除している\citep*{Cox2005-pn,Cox2007-xq}といった議論がなされる。\\
+　理論的な立場は極めて多様であるが、これに対応する実証的知見も明瞭な回答を示している訳ではない。実証上の混乱は、一部には理論的モデルがどれも純粋なモデルから予測を導出する点に求められるが、計測手法における困難も大きな要因と考えられる。\\
+　本稿では、分極化が進展してきた1970年代以降現代に至るまでの議会におけるアメリカ議会の法案審議のあり方を理解するという関心から、議会内政党の位置づけをめぐる議論がいかに展開してきたのかを検討する。まず、議会内政党を論じる理論的枠組み\footnote{議会内政党か議員かという問題を論じるのであれば、\citet*{Rohde1991-da}や\citet{Aldrich1995-xf}による条件付き政党政府論についても検討する必要があるが、本稿では紙幅の関係上、実証分析においてより\citet*{Krehbiel1998-ob,Krehbiel2010-ob}と対比されることの多いと思われる、カルテル政党論\citep*{Cox2005-pn,Cox2007-xq}のみを取り上げている。}を概観したのち、その実証的課題として、理論的問題と計測手法における問題を指摘する。特に、法案審議をめぐる議会内政党の議論が多数党を中心になされてきたことを問題視し、近年の少数党に着目した、議会研究の議論を紹介する。\\
 
-\subsection{議会政党をめぐる理論的立場}
+\section{議会政党をめぐる理論的立場}
 　本節では、アメリカ議会における政党の役割をん論じた複数の立場を整理した上で、実証的知見について概観する。その上で、既存の議論の問題点として、議会内政党をめぐる議論が議会内の権力メカニズムに主たる関心を持ってきた一方、政党と有権者との関係を十分考慮してこなかったことを指摘する。\\
 　アメリカ議会における議会内政党をめぐっては、全く異なる理論的立場が存在する。一方の極には、議会において政党は存在しないとする\citet*{Krehbiel1998-ob,Krehbiel2010-ob}の議論が存在する。他方で、もうひとつの極として議会における法案審議は主に議会の多数派を占める政党によって統制されていると考える議論も存在する。\citep*{Rohde1991-da,Aldrich1995-xf,Cox2005-pn,Cox2007-xq}
 
-\subsubsection{純粋多数派理論}
+\subsection{純粋多数派理論}
 \citet*{Krehbiel1998-ob,Krehbiel2010-ob}は議会において、政党は重要な影響力を有していないと論じる。純粋多数派理論の立場からすれば、議会において最も重要なアクターは議会の中で多数派を形成する際に鍵となる議員であるということになる。\\
 　純粋多数派理論は、議員の選好といくつかの意思決定手続きを前提とする極めて単純なモデルを構築し、議会における膠着状態の形成を説明する。その基本的モデルは、中位投票者理論(median voter theorem)を出発点とし、加重多数を要求する手続きを仮定することでより現実のアメリカ議会に近い予測を引き出す試みと言える。\\
 　まず、議員は一次元の政策的選好を共有し、各議員はその中で理想点(ideal point)を有すると仮定される。その上で、議会手続き上近年重要な位置を占めるようになった2つの加重多数手続き(supermajoritarian procedure)が仮定される。第一に、大統領による拒否権が存在する。拒否権は憲法により大統領に付与された権限であり、議会で通過した法案を拒否することができる。大統領による拒否権を乗り越えて法案を成立させるためには議会の2/3以上の賛成によって再可決する必要がある。第二に、フィリバスター(filibuster)の存在が仮定される。上院規則により、上院議員は主に長時間の演説などを通じて議案の審議を妨害することが可能となっている。これを乗り越えて法案の議決を行うためには、上院の3/5以上の賛成により審議切り上げの手続き(cloture)を取る必要がある。\\
@@ -33,39 +34,39 @@
 　では、この議論は議会審議についていかなる説明を示すのか。純粋多数派理論からすれば、議会に提出された法案は所与の議会期における議員の選好分布の中で、既存の政策的位置(status quo)と2人のピボット及び議会のメディアンとなる議員の政策的理想点との関係で決定される。第1に、既存の政策位置がピボットから極端に離れている場合にはメディアンとなる議員の選好に収斂する。第2に、2人のピボットと既存の政策位置が近づくほど、政策的帰結は両者の理想点に近づく。第3に、既存の政策位置が2人のピボットの間に存在する場合には膠着状態が生じ、政策変化が生じなくなる。\\
 　以上のように、議員の政策選好分布とその幅から法案審議の帰結が導かれると考えるのが純粋多数派理論の基本的枠組みである。\\
 
-\subsubsection{カルテル政党論}
+\subsection{カルテル政党論}
 　議会審議を論じるもうひとつの立場として、カルテル政党論\citep*{Cox2005-pn,Cox2007-xq}が存在する。この議論は議会で多数派を占める政党が議会における審議手続きを通じて、多数党内の多数派にとって不利になる法案を排除していると考えるものである。\\
 　\citet*{Cox2005-pn,Cox2007-xq}は議員と政党について6つの仮定を設定する。第1に、議員が再選を追求するアクターであること、第2に政党の評判が議員個人の再選と政党の多数派維持のために重要な要素であること、第3に政党の評判はその立法成果に依存していること、第4に立法は集合行為問題を生じさせること、第5に政党は中心化された権限を行使して議員個人の行動を統制していること、第6に政党が議員を統制する主たる手段はアジェンダを設定することにあると仮定される。\\
 　カルテル政党論において重要なのは、第6の仮説である政党によるアジェンダの設定という問題である。アジェンダを設定する権力とは、議場においてどの法案が、どんな手続きのもとで審議されるかを決定する権力のことである。具体的には、委員長が付託された法案の審議を遅らせることや、議事運営委員会において特別規則(special rule)の設定を行うことが想定される。逆に、全ての議員が参加できるような、委員会審査省略動議(discharge petition)への署名などはアジェンダ設定の権限に含まれない。このような、限定されたアクターのみが関与できる手段によって、議事が統制されていると考えるのがカルテル政党論におけるアジェンダ設定である。\\
 　この議事統制の中で、特に注目されるのが法案の排除を通じた消極的なアジェンダ設定(negative agenda control)である。これは、特定の法案が審議過程で有利になるように権力を行使するのではなく、議案がそもそも議場で審議されることを回避することを意味する。こうした議事統制は、多数党にとって不利な法案について、議論や点呼投票などの立法行為を進めることで、政党の評判を落とし、多数党が選挙において不利になることを回避するために行われるとされる。\\
 　以上のようにカルテル政党論によれば、法案審議において重要な要素はいずれの政党が多数派を握っているかという問題であり、議会における法案審議は主に多数派による議事統制を軸に展開すると考えられる。
 
-\subsubsection{条件付き政党政府論}
-　条件付き政党政府論は\citet*{Aldrich1995-xf}により提示された議論であり、
-
-\subsection{近年の展開}
-\subsubsection{理論的立場をめぐる実証的知見}
-　ここまで議会における法案審議をめぐる議論は理論的に極めて多様な立場が存在することを確認した。その中で、理論的議論は主に多数党の役割をいかに見積もるのかという問題を軸に展開しており、政党を全く考慮せず議員の政策選好のみによって説明可能であるとする議論\citep*{Krehbiel1998-ob,Krehbiel2010-ob}から、多数党が法案の審議過程に対して影響することで議事を一定程度統制しているとする議論\citep*{Aldrich1995-xf,Cox2005-pn,Cox2007-xq}まで多様な立場が存在することを指摘した。\\
-　以下では議案審議をめぐるこれらの理論的立場について、いかなる実証的根拠が提示されてきたのかについて概観する。結論を先取りすれば、実証結果は概ね多数党の議案統制に対する影響力を肯定するものであるが、指標化・理論の包含性において若干不明瞭な点が残されていることを指摘する。\\
-　議事進行に関わる実証的知見は、分析対象としては州と連邦レベルの議会を対象として、手法として主に点呼投票の議決結果を用いて実証が行われてきた。点呼投票を用いた分析では、主に投票に掛けられた法案が多数党の多数派が賛成しているにも関わらず否決される割合(roll rate)を指標として用いて、どの程度政党が影響力を行使しているのかを分析されてきた。\citep{Magleby2018-rc,Richman2020-al}\\
-　点呼投票などを中心とした量的分析の知見は、概ね多数党による影響力行使が行われていることを示しており\citep*{Cox2001-eu,Lawrence2006-ed,Cox2010-gb,Meagher2012-to,Clark2012-lk}、こうした政党の役割を無視して単に議員個人の分布の問題としてのみ議会審議を扱うことはできないと思われる\footnote{これらの議論は主に下院を対象として蓄積されているものの、上院においても多数党による議案統制がなされていることが指摘されている。\citep*{Gailmard2007-yj,Hartog2008-xs}}。\\
+\section{実証的知見と理論枠組みの再考}
+\subsection{理論的立場をめぐる実証的知見}
+　ここまで議会における法案審議をめぐる議論は理論的に極めて多様な立場が存在することを確認した。その中で、理論的議論は主に多数党の役割をいかに見積もるのかという問題を軸に展開しており、政党を全く考慮せず議員の政策選好のみによって説明可能であるとする議論\citep*{Krehbiel1998-ob,Krehbiel2010-ob}から、多数党が法案の審議過程に対して影響することで議事を一定程度統制しているとする議論\citep*{Aldrich1995-xf,Cox2005-pn,Cox2007-xq}まで多様な立場が存在することを確認した。\\
+　以下では議案審議をめぐるこれらの理論的立場について、いかなる実証的根拠が提示されてきたのかについて概観する。結論を先取りすれば、実証分析の結果は概ね多数党の議案統制に対する影響力を肯定するものであるが、指標化・理論の包含性において不明瞭な点が残されていることを指摘する。\\
+　議事進行に関わる実証的知見は、分析対象としては州と連邦レベルの議会を対象として、手法として主に点呼投票の議決結果を用いて実証が行われてきた。点呼投票を用いた分析では、投票に掛けられた法案が多数党の多数派が賛成しているにも関わらず否決される割合(roll rate)を指標として、どの程度政党が影響力を行使しているのかが分析されてきた。\citep{Magleby2018-rc,Richman2020-al}\\
+　点呼投票を中心とした観察データを用いた分析の知見は、概ね多数党が法案審議過程に対して影響力を行使していることを示しており\citep*{Cox2001-eu,Lawrence2006-ed,Cox2010-gb,Meagher2012-to,Clark2012-lk}、こうした政党の役割を無視して単に議員個人の分布の問題としてのみ議会審議を扱うことはできないと思われる\footnote{これらの議論は主に下院を対象として蓄積されているものの、上院においても多数党による議案統制がなされていることが指摘されている。\citep*{Gailmard2007-yj,Hartog2008-xs}}。\\
 　また、カルテル政党論の主張するアジェンダ設定の権能は、一定の条件のもとで発揮されることも指摘されている。\citet*[Ch6]{Cox2005-pn}は政党のアジェンダ設定にはコストが存在し得ると論じているが、これは経験的にも裏付けられており、議案審議を多数派が統制することは選挙においてコストとなりうること\citep*{Richman2015-xo}や下院での特別規則についての投票では党内の同質性が多数党の議事統制能力を条件づけていること\citep*{Finocchiaro2008-zh}などが指摘されている。多数党による統制能力が一定の条件のもとで生じるとする議論は議案の通過をめぐる点呼投票以外を対象とした分析で顕著であり、多数党の議事統制能力は段階的であることが示唆される。\\
-　その一方で、純粋多数派理論の枠組みが全く説明能力を持たないとも言えない。重要法案に限定した場合に純粋多数派理論が経験的根拠を持つと指摘する議論\citep*{Gray2019-sv}や純粋多数派理論の前提として、カルテル政党による議案統制を組み込むことによって理論予測の妥当性が向上することを州レベルで実証した知見\citep*{Crosson2019-xb}も存在しており、必ずしも多数党の議案統制のみによって議会審議が経験的に説明できている訳ではない。\\
-　以上、議会審議過程における多数党の役割を実証的に検討した文献を概観した。少なくとも分極化の進展した現代議会において、多数党は議事手続きを通じた影響力を行使し、一定程度法案の統制を行なっているが、その程度は手続きの段階と党内の凝集性によって条件づけられているといえる。これに加えて、点呼投票の段階では\citet*{Krehbiel1998-ob,Krehbiel2010-ob}の指摘するようなピボット間の幅によって議案の通過しやすさに差異が生じてくると説明することで、議会の審議過程の説明としては妥当性が向上するといえる。\\
-　では、議会審議過程は手続き段階における多数党の影響と投票段階における選好分布の問題として処理して良いだろうか。結論としては否である。多数党を中心として議案審議過程の手続きを説明できるとするならば、多数党はなぜ恒常的に少数党と交渉の場を設け、時に大きな妥協を行うのかを十分に説明できない。次項では議会審議における新しい視座として、少数党の議案審議における役割に着目した議論を参照する。\\
+　その一方で、純粋多数派理論の枠組みが全く説明能力を持たないとも言い難い。重要法案に限定した場合に純粋多数派理論が経験的根拠を持つと指摘する議論\citep*{Gray2019-sv}や純粋多数派理論の前提として、カルテル政党による議案統制を組み込むことによって理論予測の妥当性が向上することを州レベルで実証した知見\citep*{Crosson2019-xb}も存在しており、必ずしも多数党の議案統制のみによって議会審議が経験的に説明できている訳ではない。\\
+　以上、議会審議過程における多数党の役割についての実証的な分析を概観した。近年の知見が議会審議の提供する見取り図は、現代のアメリカ議会において、多数党は議事手続きを通じた影響力を行使し、一定程度法案を統制しているが、その程度は委員会での検討や点呼投票といった議会審議過程の段階と党内の凝集性によって条件づけられているというものであろう。加えて、点呼投票の段階では\citet*{Krehbiel1998-ob,Krehbiel2010-ob}の指摘するようなピボット間の幅によって議案の通過しやすさに差異が生じてくると説明することで、議会の審議過程の説明としては妥当性が向上する可能性が示唆されている。\\
+　特に法案審議をめぐって多数党が果たしてきた役割については、その具体的内容についても解明が進んでおり、おおよそ確実なものと考えて良いだろう。\citet*{Rosenthal2008-xb,Peters2010-ve}は、Nancy Pelosiの下院議長としての戦略的行動を描き出すことで、政党指導部がいかなる形で法案審議に関与してきたかを示している。\citet*{Sinclair1997-jm,Sinclair2016-kh}が論じる新しい法律制定過程においても、法案審議を前に進める上で、政党指導部が重要なアクターとして位置付けられている。\\
+
+\begin{comment}
 
 \subsubsection{少数党はいかに重要なのか}
 　議案審議過程において少数党はいかなる意義を持っているのかが近年検討されてきた。しかし、依然として理論的なまとまりがあるとは言えない。以下では、理論的な枠組みの議論\citep*{Ballard2021-su}と少数党の具体的な立法戦術に着目した議論\citep*{Koger2010-uc}を概観する。
 　\citet*{Ballard2021-su}は少数政党の戦略を論じており、立法的帰結に少数政党が影響力を持つためには3つの条件が必要になると指摘する。第1に、多数党が十分な能力を発揮できないことが必要とされる。例えば、分割政府のような状態において、多数党が法案審議を少数党に配慮せず行うことは難しい。また、両党の議席差が小さいほど、多数党側が多数決主義的に行動することは困難になる。こうした多数党側の制約が大きいほど、少数党が影響力を行使しやすくなる。第2に、少数党側が一致した行動を取ることができる必要がある。分割政府下においても、少数党が分裂して多数党に一致して臨めない場合には少数党が影響力を行使することは難しい。第3に、少数党が選挙戦略ではなく、立法戦略に力点を置く誘因が必要である。緊急事態や切迫した状況下であること、分割政府下で大統領と共に法案審議を行うなどの場合がこれに当たる。こうした3条件を満した場合に、少数党が立法成果を上げることができると主張される。\\
 　具体的な立法戦術に着目した議論もさまざまに提示されている。\citet*{Koger2010-uc}は議事妨害に着目し、少数党が議事妨害を利用して戦略的に特定の法案を妨害することができていると指摘する。加えて、近年の多数党側による戦略変化に伴って、議事妨害が恒常化するようになっていると指摘する。\citet*{Hughes2018-dj}は議会における1分間演説(One Minuite Speech)に着目し、少数党がこの演説を通じて議会で審議される政策領域に対して影響を与えていることを指摘している。\citet*{Magleby2018-rc}は個別の議員に与えられている修正条項(Amendment)を提案する権限に着目し、この手続き上の権限が多数党による議案統制の権限を制約する機能を果たすと指摘している。\citet*{Bussing2021-pb}は委員会審議の段階で、少数党が反対した法案を多数党側が議事から外す傾向にあることを指摘し、その背景に観衆費用によるリスク回避のメカニズムが存在すると主張する。\\
+\end{comment}
 
-\subsubsection{実証的知見における課題}
-　既存の議会研究における審議過程をめぐる実証的知見は、大きく3つの点で限界を有している。第1に、分析対象に含める議案の幅をいかに導出するかが明瞭ではない。第2に、少数党と多数党がそれぞれいかなる戦略に基づいて行動しているかについて議論が十分蓄積されていない。第3に、最も重要な点として、議会内のメカニズムに注目するあまり、議会外の要因が議案の審議過程に与える影響が不明瞭であることが指摘できる。\\
-　第1の分析対象の問題については主にいかに操作化を行うかという問題である。アメリカ議会において、分析対象とする法案を選定することはそれ自体非常に難しい課題であり。通常、議会には上下両院で1年間に1万件近くの法案が提出されており、その多くはほとんど意味を持たないものである。各委員会の委員長が、審議すべき法案と審議の必要がない法案とを選別していることは明白な事実であるが、そこに政策的な意図が存在していることを示すことは容易ではない。先行研究がこれまで点呼投票における多数党の失敗する割合などに着目してきたのはこうした観察上の困難が大きいと思われる。なお、この操作化は直接的でないだけでなく、測定方法として不適切であるとする批判もある。\citep*{Patterson2020-rh}\footnote{より妥当な計測方法を探る議論として、議員の理想点推定の精度向上\citep*{Stiglitz2010-zh}や反実仮想的な投票行動を推定することでバイアスを除去しようとする試み\citep*{Robinson2015-jd}、法案のテキストデータを用いて提出された法案全てについて、議員の賛否を推定する試み\citep*{Ballard2022-gi}などがある。}。
-　第2の少数党と多数党の戦略関係について、\\
-　第3の議会外部の影響を排除した議論がなされることは最も大きな問題である。前項まで概観した通り、既存の議会における審議を扱う研究では、主に議会内の制度的メカニズムや議員の選好を所与とした選好幅の議論がなされている。他方で、議員の選好が少なくとも議会期毎にのみ更新されるという仮定は現実の政治的展開に必ずしも合致しない。\\
-　例えば、2022年6月に提出された銃規制法案に対して、共和党院内総務のMitch McConellを含む14人の共和党上院議員が賛成を表明したことは驚きを持って迎えられた。\citep*{Kapur2022-tg}McConellはNRAによる議員評価でA++を獲得するなど銃規制に対して徹底的に反対する議員として知られている。そうした議員が突如として限定的とはいえ銃規制を導入するような法案に賛成を表明するということは選好を大きく変化させた投票行動と言わざるを得ない。多数党による統制という文脈からも、銃規制は基本的に民主党にとっての「得点」であり、共和党からすれば立法上の「失点」である。こうした中で、共和党の重要議員から離反者が出るという現象は説明しにくい。\\
-　議員の政策的選好は極めて短期で代わりうる上に、そうした現象は政党間の立法成果をめぐる争いからだけでは十分に説明できないのではないだろうか。こうした現象をよりよく説明するためには、議会内のメカニズムを踏まえた上で、議員がいかなる刺激を有権者から受け取っているのかという問題を検討する必要があると考えられる。\\
+\subsection{実証的知見における課題}
+　既存の議会研究における審議過程をめぐる実証的知見は、大きく3つの点で限界を有している。第1に、分析対象に含める議案の幅をいかに導出するかが明瞭ではない。第2に、先行研究の中で、政党の役割が強調される場合にも基本的には多数党の影響力が重視されており、少数党がそれに対していかなる戦略を持って立法過程に参与しているかについては理論的に十分検討されてこなかった。第3に、最も重要な点として、議会内のメカニズムに注目するあまり、議会外の要因が議案の審議過程に与える影響が不明瞭であることが指摘できる。\\
+　第1の分析対象の問題は、いかに操作化を行うかという問題である。アメリカ議会において、分析対象とする法案を選定することはそれ自体非常に難しい課題である。通常、議会には上下両院で1年間に1万件近くの法案が提出されており、その多くはほとんど意味を持たないものである。各委員会の委員長が、審議すべき法案と審議の必要がない法案とを選別していることは明白な事実だが、そこに政策的な意図が存在していることを示すことは容易ではない。両院に提出される法案のうちに、立法化を真剣に目指すものとそうでないものが混在している以上、法案が審議の俎上に上げられなかったという事実だけでは、当該法案が単に立法過程で真剣な審議の対象たり得ないものだったのか、それとも党派的な意図が背景にあったのかが区別できないのである。先行研究がこれまで点呼投票において多数党が失敗する割合などの間接的な変数に着目してきたのはこうした観察上の困難が大きいと思われる\footnote{なお、この操作化は直接的でないだけでなく、測定方法として不適切であるとする批判もある。\citep*{Patterson2020-rh}より妥当な計測方法を探る議論として、議員の理想点推定の精度向上\citep*{Stiglitz2010-zh}や反実仮想的な投票行動を推定することでバイアスを除去しようとする試み\citep*{Robinson2015-jd}、法案のテキストデータを用いて提出された法案全てについて、議員の賛否を推定する試み\citep*{Ballard2022-gi}などがある。}。\\
+　第2の少数党と多数党の戦略関係について、政党の役割を強調してきた理論は、主に多数党が公式の権限を用いていかに審議過程を統制しているかに関心を持ってきた。他方で、少数党がいかなる影響を審議過程に及ぼすのかについては十分検討されてこなかった。こうした背景から、近年少数党が審議過程に対して非公式なチャネルから影響力を行使しているとする議論が提起されている。\\
+　\citet*{Koger2010-uc}は議事妨害に着目し、少数党が議事妨害を利用して戦略的に特定の法案を妨害することができていると指摘する。加えて、近年の多数党側による戦略変化に伴って、議事妨害が恒常化するようになっていると指摘する。\citet*{Hughes2018-dj}は議会における1分間演説(One Minuite Speech)に着目し、少数党がこの演説を通じて議会で審議される政策領域に対して影響を与えていることを指摘している。\\
+　第3の議会外部の影響を排除した議論がなされることは最も大きな問題だと考えられる。議会審議をめぐる議論が制度的影響力を軸に議論を展開してきたことは重要な示唆を多く提供する一方で、しばしば政策変化の議論で指摘されるような一定期間の安定性と短期間での急速な変化という現象を説明することは難しい。\citep*{Baumgartner1993-bc}政策とその変化に着目してきた研究者は、議員の分布や政治制度が変化していないにも関わらず、政策転換が生じるという現象をしばしば論じてきた。\citep*{Baumgartner1993-bc,Sabatier1993-id,Birkland1997-lq,Baumgartner2009-eb,Baumgartner2020-ee}\\
+　議会はアメリカ政治における立法の主戦場ではあるが、それは議会が独立に存在し、立法を行なっていることを意味しない。他方で、議会には先行研究が指摘してきたような制度的建付とそれに規定された議員行動が存在している。社会と議会との関係が、議会内の制約によっていかなる帰結をもたらしうるのかについて更なる議論が必要ではないだろうか。\\
 
 \bibliography{reference}
 \end{document}
