--- a/writings/intro.tex
+++ b/writings/intro.tex
@@ -1,4 +1,4 @@
-\section{Introduction}
+\section{はじめに}
 　アメリカの議会はしばしば「世界最強」の議会\citep*{2004-cr}と言われ、憲法上立法を担う集団として多くの分析が蓄積されてきた。連邦議会はアメリカ政治において最も重要なアクターのひとつであり、その決定は政治的・社会的に大きな意味を持つ。\\
 　しかしながら、近年アメリカ議会は分極化の影響を受け、その機能を十分に発揮していないとする議論もある。民主党と共和党が鋭く対立し、議会における法案審議が停滞するといった手詰まりの状態(gridlock)が問題視され、議会が十分に立法機能を果たすことが困難になっているとも指摘される\footnote{議会審議が行き詰まることによって、重要な法案の審議が進まない「立法生産性」の低下がもたらされているかについては議論の余地がある。\citep*{}しかしながら、議会において法案審議がかつてのように議案ごとに審議と票読みを行い、多数派形成を都度行うといった法案審議・議決過程が行われなくなり、より固定的な投票行動が観察されるようになってきていることは事実である。\citep*{Poole2017-ir,Layman2006-tg}}。\\
 　こうした状態で、アメリカ議会はどのようにしてアメリカ社会を代表していると言えるのだろうか。ひとつの事例として銃規制問題が挙げられる。銃の所持は現在のアメリカにおいて憲法典によって認められた権利として位置付けられており、連邦政府が直接のその所有や管理を規制もしくは禁止することは非常に困難になっている。他方で、度重なる銃乱射事件はアメリカ社会における銃の位置付けを問い直しており、Pew Research Centerによる調査では、2019年の時点で60\%の有権者がより厳しい銃規制を支持している\footnote{この比率は年々増加しており、2017年には52\%、2018年には57\%の有権者がより厳しい銃規制を望んでいる。}。\citep*{Schaeffer2019-ld}\\
@@ -6,12 +6,42 @@
 　ではなぜ、世論が関心を持つ法案であっても、議会において十分な審議や立法成果に繋がらないという現象が生じるのだろうか。これに対する重要な解答は、議会が必ずしも世論に直接反応して立法活動に携わっているわけではないことに由来する。以下では、議会研究を中心とした研究成果を概観しながら、議会と有権者を含む公共空間とがいかに連結し、分断されているのかを検討した上で、本論の問題設定を提示する。\\
 
 \subsection{議会はどこを向いて立法しているのか}
-　議会が有権者を代表しているのかという問いは大別して3つの観点から議論されてきた。第1に、社会を議会がいかに反映しているのかを検討するという分析枠組みが提示されてきた。例えば、議会がいかなる法律を制定するのかという視角から分析がなされている。\\
-　第2の方策として、議員と有権者との関係性を論じることも模索されてきた。\citet*{Fenno1977-se,Fenno2000-up}に代表されるように、議員が選挙区をいかに代表しているのかを追跡調査によって探索する試みや、議員が有権者に対していかなるアピールを行ってきたのかを検討するなどの戦略も取られてきた。\\
+　アメリカ議会研究において、議会が有権者を代表しているのかという問いは大別して3つの観点から議論されてきた。第1に、社会を議会がいかに反映しているのかを検討するという分析枠組みが提示されてきた。議員の投票行動に基づいた議員や法案の政策的位置の測定\citep*{Poole2017-ir,Caughey2016-ef}やそれらに基づき、議員と有権者との政策位置の差異を論じるという分析\citep*{Hall2015-kc,Hall2019-oe}は、議員が有権者をいかに反映しているのかをいう関心から理解することができる。\\
+　第2の方策として、議員と有権者との関係性を論じることも模索されてきた。\citet*{Fenno1977-se,Fenno2000-up}に代表されるように、議員が選挙区をいかに代表しているのかを追跡調査によって探索する試みや、議員が有権者に対していかなるアピールを行ってきたのかを検討するなどの分析がなされてきた。\\
 　第3の方策として、議会が立法活動にどの程度従事しているのかという機能の面に着目した議論がなされている。\citet*{Mayhew1991-rq,Mayhew2005-or}の\textit{Divided We Govern}を画期として蓄積されてきたこの議論は、議会が立法生産にどの程度寄与しているのかを論じることで、議会が社会を代表するという働きをどの程度達成できているのかを論じている。近年のイデオロギー的分極化を受けて、議会がこう着状態や機能不全に陥っているという指摘もなされており、現代の議会を考える上で重要な論点と言える。\\
+　以下では、3つの枠組みについてより具体的に検討したのち、本論での問題関心を提示し、議論の全体像を概観する。\\
 
-\subsubsection{議員配置}
-　議会における意思決定の幅を議員の配置図から考察する議論も存在する。\citep*{Krehbiel2010-ob,Tsebelis2009-hf}
+\subsubsection{政策的位置の推定と代表}
+　議会において、いかなる法律が制定されているのかを問うことは議会研究にとって極めて重要な問題関心であった。この関心に対する最も単純な解答は、議会に提出される、もしくは可決された法案の具体的内容を検討するというものである。この方策は主に政策史研究において用いられ、個別の法案や立法の内容を適切に把握することができるという面で優位性を持つ。\\
+　しかし、議会研究の中でこの方策が取られることは非常に少ない。その理由の一つは、少なくとも80年代以降のアメリカ議会研究が、個々の事例における過程ではなく、複数の事例に見られる傾向に重点を置いてきたことに求められるだろう。この全体の傾向を把握するという志向を有する研究にとって、個別の法案を逐一検討していくことはほとんど不可能であった。\\
+　こうした課題を克服するひとつのアプローチが「政策的理想点」の推定である。\\
+　理想点を推定することによって、\\
+
+\subsubsection{議員/有権者関係としての代表}
+
+\subsubsection{機能する議会としての代表}
+
+
+\subsection{代表と機能}
+　本論は議会の機能と社会への応答性に主たる関心を有する。これは、議会が実際にいかなる法案を審議し、立法しているのかという問題を抜きにして議会の代表性を論じることは不可能であると考えるからである。\\
+　加えて、議会審議の内容は個別議員や政党が所与に有する政策的立場やその分布と権力関係によって決定されると考えるのではなく、有権者やメディアなどといった議会を取り巻くさまざまな社会的要因によって規定されるというモデルを採用する\footnote{これは政策選好が全く効果を持たないということではなく、政策選好よりも重要な要素が存在しているのではないかということである。}。従来の議会研究の多くは、議員個々人が政策選好を有しており、選挙などによって生じる政策選好分布の変化によってのみ既存の法律が変更されるというモデルによって議会の法案審議を論じている。\citep*{Poole2017-ir,Krehbiel1998-ob,Cox2005-pn,Cox2007-xq,Aldrich1995-xf}しかし、こうした所与の政策選好分布と権力構図との組み合わせによって議会の法案審議を論じることにはいくつかの重要な問題が存在すると思われる。\\
+　第一に、法案の初出と法律化とのズレの問題である。議会に提出される法案の多くは、初めて議会に提出されるものではなく、すでに複数の議会期で提出されたことのある内容の法案が形を変えながら再度提出されている。すなわち、提出されても法律化される場合とそうでない場合とが存在するということである。政策選好が法案審議の主たる説明要因であるとすれば、複数回法案が提出される間に少なくない数の議員構成の変化が生じる必要がある。\\
+　しかし、実際には法案が複数回提出される間に必ずしも一定以上の構成員の変化が生じているとは考えにくい。各議会期において一定数の法案が審議され、可決されているのであり、可決されたものとされなかったものを「現状打開点」\citep*{Tsebelis2009-hf}に特定の会期のみ入ったとは考えにくい。そもそも、同じ議会期にほとんど同内容の法案が複数回提出される場合すらある。政策選好によって議決結果が決定されるとすれば、これは荒唐無稽な行動と言わざるを得ない。\\
+　こうした問題を政策選好によって解決するために必要となるのが、政策選好の変化である。\citet*{Poole2017-ir}が論じるように、個々の議員が有する政策選好の理想点は時期によって異なっており、既存の理想点推定の手法はこうした変化に何らかの形で応答しているといえる\footnote{\citet*{Poole2017-ir}は理想点の変化を線形にモデル化しているが、ベイズ推定による事前分布設定を行うIRTを利用することでより柔軟な推定が可能であるとも指摘されている。\citep*{Caughey2016-ef}}。政策選好が時期によって変化するという枠組みを採用することで、異なる時期に異なる政治的判断を下すという現象を説明可能になる。\\
+　他方で、政策選好の変化という枠組みは政策選好によって議決や法案提出といった議会における審議パターンを説明する利点を損なう側面を有する。政策選好によって議会の審議過程を説明し、付加的に手続きや規則による制約、政党の権限などを条件付けするという分析枠組みは、議員個人の政策選好が一定程度固定的である場合に意味を持つ。「保守的な議員が多い場合に保守的な法案が通りやすい」「保守的な議員が多くとも委員長をリベラルな議員が占めている場合には保守的な法案が通りにくい」といった説明は、保守/リベラルという政策選好が一定程度頑健である場合には意味を持つ。しかし、保守/リベラルという政策選好が場合によって、また異なる状況下で大きく変化するとしたら、そうした変数によって審議過程を説明することにどのような意味があるだろうか。\\
+　こうした可変的な政策選好を推定することは、予測の面では大きな意味を有する。推定に対して一定の揺らぎを読み込むことは、未知の投票に対して議会がどのような応答をし得るかという問題に回答するためには、その説明能力を向上させるという意味で重要な役割を有する。\\
+　他方で、イデオロギー尺度による、もしくはそれに制度的機構や権力分布を条件付けた法案審議の説明モデルは結局のところ、根本的な課題を克服できていない。「なぜ法案は何度も提出され、タイミングによってその成否が異なるのか」という問題は、イデオロギー尺度を説明変数とするモデルでは回答しにくい。\\
+
+\subsection{説明変数として社会と注目度の概念}
+　本論の第一の主張は、「議会における法案審議を論じる上で、政策領域に対する社会的な注目度合いが重要な変数である」というものである。こうした議論は、イデオロギー尺度を主軸とする議論に比べれば数は少ないものの、一定以上の蓄積が存在する。\\
+　本論が、既存の政策領域への注目度と法案審議との関係を論じた多くの研究と明確に異なるのは、「政策領域への注目度は法案審議に対して負の影響を与えうる」という点であり、これが本論の第二の主張である。以下では、政策領域への注目度と立法過程との関係を論じてきた3つの議論を概観した上で、政策領域が注目されることによる負の側面の重要性を指摘する。\\
+
+\subsubsection{政策変化をもたらす「注目」}
+　政策領域への注目度を扱った分析として古典的なものは\citet*{Kingdon1984-oq}の「３つの流れモデル(Multiple Stream Framework)」\footnote{\citet*{Kingdon1984-oq}が\textit{Agendas, alternatives, and public policies}の中で論じた政策変化をもたらす過程の議論にKingdon本人は明確な呼称を与えていない。本邦では「政策の窓モデル」などの呼称が一般的であるが、ヨーロッパ諸国などの適用においては\citet*{Zahariadis2003-ck}の用いた"Multiple Stream Framework(MSF)"の呼称が一般的であり、レビュー論文や教科書などでもこの呼称が用いられている。また、研究史上も政策のライフサイクル論に対して複数の流れの複合体として政策変化を論じた点にKingdonによる議論の重要性があるとの判断から本論では「3つの流れモデル」と表記する。}であろう。\citet*{Kingdon1984-oq, Kingdon2013-ac}は、組織的意思決定のゴミ缶モデル\citep*{Cohen1972-ym}を応用した大統領府の分析を通じて政策変化をもたらす要因を論じた。「3つの流れモデル」は、政策変化をもたらす過程を「問題の流れ」「政策の流れ」「政治の流れ」という3つの異なる相互に独立した過程の混合物として捉え、これらが合流することによって政策変化が生じる契機がもたらされるとする。この契機を「政策の窓」と呼び、3つの流れを合流させて契機をもたらし、それを掴んで政策的な変化をもたらすためには、政策企業家(policy entrepreneur)が重要な役割を果たすと論じられる。\citep*{Kingdon1984-oq,Kingdon2013-ac}\\
+　このようなMSFモデルは、政策変化を説明するモデルとして有効であるとされ、議院内閣制の国における政策過程を含めた広い適用対象を包含するモデルとして様々な政策過程の分析において応用されてきた。\citep*{Rawat2016-ew,Jones2016-lc}\\
+　しかしながら、MSFモデルはその予測可能性の低さ\citep*{}や概念整理が不十分である\citep*{John2018-im}などの点から批判されてきた。MSFモデルは政策過程をめぐる極めて複雑な問題状況を整理する補助線を提供するという意味で極めて重要な貢献を果たした一方で、「3つの流れ」とされる概念間には十分な対応関係は存在せず、それぞれの流れが具体的にいかなる要素を内包しているのかも判然としない。MSFモデルを実際に用いた多くの分析において、概念や操作化に一貫性がない\citep*{Jones2016-lc}ことも、このモデルが原因と結果の関係を論じるというよりむしろ、問題状況の整理と認識のための枠組みという側面が強いことを示している。\\
+　こうした課題に対応する議論として、JonesとBaumgartnerによる一連の研究\citep*{Baumgartner2010-rl,Baumgartner2020-ee, Baumgartner2009-eb}は政策変化の過程において一定期間の安定性と短期の急激な変動という特徴が存在することを指摘し、そうした現象が生じる要因を分析している。Baumgartnerらによる一連の研究は、政策変化が基本的に生じにくいものであるという前提を引き継ぎつつ、それが大きなインパクトを伴って\\
+
 \subsubsection{議会内政党}
 　議員の構図を重視するKrehbielらの議論に対して、議会内政党が議会の法案審議や議決に関して重要な役割を果たしてきたとする議論も存在する。\citep*{Cox2005-pn,Cox2007-xq,Rohde1991-da,Aldrich1995-xf}\\
 \subsection{議員行動と政党の役割}
@@ -30,13 +60,11 @@
 　このように、どの政策領域が注目を集めるのかという問題は、多くの理論的立場が存在するものの、経験的な知見は十分に蓄積されてきたとは言い難い。Comparative Agendas Projectはこれらの課題に対して、複数国の比較を可能とするデータセットを構築した点で重要な貢献であるが、このデータを用いて、特定の政策領域で注目が形成される要因についての分析は十分になされてきたとは言えない。\\
 　本稿では、議会という政策過程が展開する特定のフィールドに焦点を当て、議会における政策的な注目が形成される要因を分析することを通じて、「法案が重要な関心をもたれる」という現象がいかなる要因によってもたらされてきたかを分析する。\\
 
+
+
 \section{問題状況}
 \subsection{Policy Process \& Focus Point}
-　政策変化がいかにもたらされるかについては、多くの先行研究がその要因を分析してきた。古典的研究として、\\
-　\citet*{Kingdon1984-oq, Kingdon2013-ac}は、組織的意思決定のゴミ缶モデル\citep*{Cohen1972-ym}を応用した大統領府の分析を通じて政策変化をもたらす要因を論じたことで、近年の政策変化にかかわる議論の素地を提供した。「3つの流れモデル(Multiple Stream Framework, MSF)」と呼ばれるこのモデルは、政策変化をもたらす過程を「問題の流れ」「政策の流れ」「政治の流れ」という3つの異なる相互に独立した過程の混合物として捉え、これらが合流することによって政策変化が生じる契機がもたらされるとする。この契機を「政策の窓」と呼び、3つの流れを合流させて契機をもたらし、それを掴んで政策的な変化をもたらすためには、政策企業家(policy entrepreneur)が重要な役割を果たすと論じられる。\citep*{Kingdon1984-oq, Kingdon2013-ac}\\
-　このようなMSFモデルは、政策変化を説明するモデルとして有効であるとされ、議院内閣制の国における政策過程を含めた広い適用対象を包含するモデルとして様々な政策過程の分析において応用されてきた。\citep*{Rawat2016-ew,Jones2016-lc}\\
-　しかしながら、MSFモデルはその予測可能性の低さ\citep*{}や概念整理が不十分である\citep*{John2018-im}などの点から批判されてきた。MSFモデルは政策過程をめぐる極めて複雑な問題状況を整理する補助線を提供するという意味で極めて重要な貢献を果たした一方で、「3つの流れ」とされる概念間には十分な対応関係は存在せず、それぞれの流れが具体的にいかなる要素を内包しているのかも判然としない。MSFモデルを実際に用いた多くの分析において、概念や操作化に一貫性がない\citep*{Jones2016-lc}ことも、このモデルが原因と結果の関係を論じるというよりむしろ、問題状況の整理と認識のための枠組みという側面が強いことを示していると思われる。\\
-　JonesとBaumgartnerによる一連の研究\citep*{Baumgartner2010-rl, Baumgartner2020-ee, Baumgartner2009-eb}は政策変化の過程において一定期間の安定性と短期の急激な変動という特徴が存在することを指摘し、そうした現象が生じる要因を分析している。\\
+　政策変化がいかにもたらされるかについては、多くの先行研究がその要因を分析してきた。古典的研究とし
 
 \subsection{制度間差異の重要性}
 　ではなぜ、政策変化の分析を行う上で制度間差異が重要なのだろうか。断続均衡理論の貢献は、異なる領域における現象を政策変化という側面から切り出すことによって、共通の構造が存在していることを指摘した点にあると言える。これは、政策変化が展開する領域ごとの差異を捨象することによって共通のメカニズムを抽出する試みとして評価できる。\\
