--- a/writings/reference.bib
+++ b/writings/reference.bib
@@ -374,6 +374,21 @@
   year      =  2021
 }
 
+@ARTICLE{Caughey2016-ef,
+  title     = "Substance and Change in Congressional Ideology: {NOMINATE} and
+               Its Alternatives",
+  author    = "Caughey, Devin and Schickler, Eric",
+  abstract  = "Substance and Change in Congressional Ideology: NOMINATE and Its
+               Alternatives - Volume 30 Issue 2",
+  journal   = "Studies in American Political Development",
+  publisher = "Cambridge University Press",
+  volume    =  30,
+  number    =  2,
+  pages     = "128--146",
+  month     =  oct,
+  year      =  2016
+}
+
 @ARTICLE{Clark2012-lk,
   title    = "Examining parties as procedural cartels: Evidence from the {U.S}.
               States",
@@ -687,6 +702,70 @@
                spatial models; US Congress; legislative implementation; policy
                making; political ideology; political theory; state role;
                theoretical study; United States"
+}
+
+@BOOK{Hall2019-oe,
+  title     = "Who Wants to Run?",
+  author    = "Hall, Andrew B",
+  abstract  = "The growing ideological gulf between Democrats and Republicans
+               is one of the biggest issues in American politics today. Our
+               legislatures, composed of members from two sharply disagreeing
+               parties, are struggling to function as the founders intended
+               them to. If we want to reduce the ideological gulf in our
+               legislatures, we must first understand what has caused it to
+               widen so much over the past forty years. Andrew B. Hall argues
+               that we have missed one of the most important reasons for this
+               ideological gulf: the increasing reluctance of moderate citizens
+               to run for office. While political scientists, journalists, and
+               pundits have largely focused on voters, worried that they may be
+               too partisan, too uninformed to vote for moderate candidates, or
+               simply too extreme in their own political views, Hall argues
+               that our political system discourages moderate candidates from
+               seeking office in the first place. Running for office has rarely
+               been harder than it is in America today, and the costs dissuade
+               moderates more than extremists. Candidates have to wage
+               ceaseless campaigns, dialing for dollars for most of their
+               waking hours while enduring relentless news and social media
+               coverage. When moderate candidates are unwilling to run, voters
+               do not even have the opportunity to send them to office. To
+               understand what is wrong with our legislatures, then, we need to
+               ask ourselves the question: who wants to run? If we want more
+               moderate legislators, we need to make them a better job offer.",
+  publisher = "University of Chicago Press",
+  month     =  apr,
+  year      =  2019,
+  keywords  = "polarization; elections; congress; US House; legislatures;
+               campaign finance",
+  language  = "en"
+}
+
+@ARTICLE{Hall2015-kc,
+  title     = "What Happens When Extremists Win Primaries?",
+  author    = "Hall, Andrew B",
+  abstract  = "This article studies the interplay of U.S. primary and general
+               elections. I examine how the nomination of an extremist changes
+               general-election outcomes and legislative behavior in the U.S.
+               House, 1980--2010, using a regression discontinuity design in
+               primary elections. When an extremist---as measured by
+               primary-election campaign receipt patterns---wins a
+               ``coin-flip'' election over a more moderate candidate, the
+               party's general-election vote share decreases on average by
+               approximately 9--13 percentage points, and the probability that
+               the party wins the seat decreases by 35--54 percentage points.
+               This electoral penalty is so large that nominating the more
+               extreme primary candidate causes the district's subsequent
+               roll-call representation to reverse, on average, becoming more
+               liberal when an extreme Republican is nominated and more
+               conservative when an extreme Democrat is nominated. Overall, the
+               findings show how general-election voters act as a moderating
+               filter in response to primary nominations.",
+  journal   = "Am. Polit. Sci. Rev.",
+  publisher = "Cambridge University Press",
+  volume    =  109,
+  number    =  1,
+  pages     = "18--42",
+  month     =  feb,
+  year      =  2015
 }
 
 @ARTICLE{Hartog2008-xs,
@@ -1383,6 +1462,37 @@
   pages     = "157--185",
   month     =  may,
   year      =  2010
+}
+
+@BOOK{Zahariadis2003-ck,
+  title     = "Ambiguity and Choice in Public Policy: Political Decision Making
+               in Modern Democracies",
+  author    = "Zahariadis, Nikolaos",
+  abstract  = "Zahariadis offers a theory that explains policymaking when
+               ``ambiguity'' is present---a state in which there are many ways,
+               often irreconcilable, of thinking about an issue. Expanding and
+               extending John Kingdon's influential ``multiple streams'' model
+               that explains agenda setting, Zahariadis argues that
+               manipulation, the bending of ideas, process, and beliefs to get
+               what you want out of the policy process, is the key to
+               understanding the dynamics of policymaking in conditions of
+               ambiguity. He takes one of the major theories of public policy
+               to the next step in three different ways: he extends it to a
+               different form of government (parliamentary democracies, where
+               Kingdon looked only at what he called the United States's
+               presidential ``organized anarchy'' form of government); he
+               examines the entire policy formation process, not just agenda
+               setting; and he applies it to foreign as well as domestic
+               policy.This book combines theory with cases to illuminate
+               policymaking in a variety of modern democracies. The cases cover
+               economic policymaking in Britain, France, and Germany, foreign
+               policymaking in Greece, all compared to the U.S. (where the
+               model was first developed), and an innovative computer
+               simulation of the policy process.",
+  publisher = "Georgetown University Press",
+  month     =  jul,
+  year      =  2003,
+  language  = "en"
 }
 
 %% 日本語文献
